[tool.poetry]
name = "contact_book"
version = "0.1.0"
description = "a python based contact book"
authors = ["MTS999 <mtsprogrammer999@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
